# sparse

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile.gpu  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  Untitled.ipynb  asv.conf.json  azure-pipelines-docs.yml  azure-pipelines.yml  conftest.py  mkdocs.yml  multi_adv_ix_test.py  multi_adv_ix_test2.py  pixi.toml  pyproject.toml  pytest.ini  pytest_Finch.ini  readthedocs.yml  release-procedure.md  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml  environment.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  doc_issue.yml  feature_request.md  feature_request.yml  question-support.md  question-support.yml
.github/workflows/: ci.yml  codeql.yml  codespeed.yml  codspeed.yml  release-drafter.yml  tests.yml
_skbuild/linux-x86_64-3.7/cmake-build/: CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake
benchmarks/: benchmark_backends.py  benchmark_coo.py  benchmark_gcxs.py  benchmark_matmul.py  benchmark_tensordot.py  conftest.py  test_benchmark_coo.py  test_elemwise.py  test_tensordot.py  utils.py
benchmarks_original/: benchmark_coo.py  benchmark_tensordot.py  elemwise_example.py  mttkrp_example.py  sddmm_example.py  utils.py
ci/: 01-install.sh  Finch-array-api-skips.txt  Finch-array-api-xfails.txt  Numba-array-api-skips.txt  Numba-array-api-xfails.txt  array-api-skips.txt  array-api-tests-rev.txt  array-api-xfails.txt  azure-docs.yml  azure-pipelines-default-config.yml  azure-steps.yml  clone_array_api_tests.sh  environment-2.7.yml  environment-3.6.yml  environment-3.7.yml  environment-3.8.yml  environment.yml  setup_env.sh  test_Finch.sh  test_MLIR.sh  test_Numba.sh  test_all.sh  test_array_api.sh  test_backends.sh  test_examples.sh  test_notebooks.sh
docs/: .conf.py.swp  Makefile  api.rst  changelog.md  changelog.rst  completed-tasks.md  conduct.md  conduct.rst  conf.py  construct.md  construct.rst  contribute.rst  contributing.md  contributing.rst  gen_logo.py  getting_started.rst  how-to-guides.md  index.md  index.rst  install.md  install.rst  make.bat  migration-jl.md  modules.rst  notebooks.md  operations.md  operations.rst  quickstart.md  quickstart.rst  requirements.txt  roadmap.md  roadmap.rst  sparse.rst  user_manual.rst
docs/_templates/autosummary/: class.rst  function.rst  module.rst
docs/css/: mkdocstrings.css
docs/examples/: dask_example.py  elemwise_example.py  finch_example.py  formats_example.py  formats_example_finch.py  matmul_example.py  my_jupyter.ipynb  scipy_example.py  sparse_finch.ipynb
docs/getting_started/: constructing.rst  converting.rst  operations.rst
docs/getting_started/operations/: indexing.rst  other.rst
docs/user_manual/: building_dok.rst  converting.rst  getting_started.rst  installing.rst  operations.rst
docs/user_manual/operations/: basic.rst  elemwise.rst  indexing.rst  operators.rst  other.rst  reductions.rst
examples/: elemwise_example.py  hits_example.py  matmul_example.py  mttkrp_example.py  pagerank_example.py  sddmm_example.py  sparse_finch.ipynb  spmv_add_example.py  spmv_example.py  triangles_example.py  utils.py
requirements/: all.txt  tests.txt  tox.txt
scripts/: copy_notebooks.py  gen_ref_pages.py  test_examples.sh  test_notebooks.sh
sparse/: ._utils.py.swp  __init__.py  _common.py  _compressed.py  _cxx.cxx  _dok.py  _dok_indexer.py  _io.py  _numba_extension.py  _settings.py  _slicing.py  _sparse_array.py  _umath.py  _utils.py  _version.py  compatibility.py  coo.py  core.py  densification.py  dok.py  einsum.py  io.py  numpy_vindex.py  py23.py  slicing.py  sparse_array.py  utils.py
sparse/_compressed/: __init__.py  common.py  compressed.py  convert.py  elemwise.py  indexing.py
sparse/_coo/: __init__.py  common.py  core.py  indexing.py  numba_extension.py  umath.py
sparse/_meta/: compressed_level.py  dense_level.py  format.py  hashed_level.py  iteration_graph.py  merge_lattice.py  meta.py  numba_bindings.py  sparsedim.py  test.py
sparse/_meta/tests/: test_compressed.py  test_dense.py  test_iteration_graph.py  test_level_integration.py  test_tensor_insert_data.py  utils.py
sparse/compressed/: __init__.py  compressed.py  convert.py  csc.py  csc_indexing.py  csr.py  csr_indexing.py  indexing.py
sparse/coo/: __init__.py  _common.py  _core.py  _elemwise.py  common.py  core.py  indexing.py  io.py  umath.py  umath_cython.pyx
sparse/finch_backend/: __init__.py
sparse/mlir_backend/: __init__.py  _array.py  _common.py  _constructors.py  _conversions.py  _core.py  _dtypes.py  _levels.py  _memref.py  _ops.py  formats.py  levels.py
sparse/mlir_backend/tests/: __init__.py  conftest.py  test_simple.py
sparse/ndsparse/: __init__.py  _tensor.py
sparse/numba_backend/: __init__.py  _common.py  _dok.py  _info.py  _io.py  _settings.py  _sparse_array.py  _umath.py  _utils.py
sparse/numba_backend/_compressed/: compressed.py  indexing.py
sparse/numba_backend/_coo/: common.py  core.py  indexing.py  numba_extension.py
sparse/numba_backend/tests/: __init__.py  (+14 more)
sparse/pydata_backend/: __init__.py  _common.py  _dok.py  _io.py  _numba_extension.py  _slicing.py  _sparse_array.py  _umath.py  _utils.py
sparse/scheduler/: __init__.py  compiler.py  executor.py  finch_logic.py  lazy.py  optimize.py  rewrite_tools.py
sparse/tests/: .test_dot.py.swp  __init__.py  _utils.py  conftest.py  test_array_function.py  test_backends.py  test_compressed.py  test_compressed_2d.py  test_compressed_convert.py  test_conversion.py  test_coo.py  test_coo_numba.py  test_core.py  test_dask_interop.py  test_dok.py  test_dok_indexer.py  test_dot.py  test_einsum.py  test_elemwise.py  test_io.py  test_namespace.py  test_ndsparse.py
tests/: conftest.py  test_array_function.py  test_compressed.py  test_coo.py  test_dok.py
xp-tests/: Numba-array-api-skips.txt  Numba-array-api-xfails.txt  array-api-tests-rev.txt
(+25 files in other folders)
